--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "autoprefixer": "^10.3.1",
     "babel-eslint": "^10.1.0",
+    "cypress": "^8.4.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
